[workspace]
members = [
    "crates/timesimulation",
    "crates/demo",
    "crates/client",
    "crates/pipe-listener",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "io-std", "sync", "time", "net"] }
thiserror = "1"
tempfile = "3"
