[package]
name = "timesimulation"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true }
rmp-serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
